--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -88,8 +88,8 @@
                                             'type': 'select',
                                             'name': 'type',
                                             'args': {
-                                                'option': _(reference('/App/Domain/Types/Catalog/ProductTypeType::LIST')),
-                                                'selected': reference('/App/Domain/Types/Catalog/ProductTypeType::TYPE_PRODUCT')
+                                                'option': _(constant('/App/Domain/Types/Catalog/ProductTypeType::LIST')),
+                                                'selected': constant('/App/Domain/Types/Catalog/ProductTypeType::TYPE_PRODUCT')
                                             }
                                         } %}
                                     </div>
