--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -86,7 +86,7 @@
                                     'type': 'select',
                                     'name': 'status',
                                     'args': {
-                                        'option': _(reference('/App/Domain/Types/GuestBookStatusType::LIST')),
+                                        'option': _(constant('/App/Domain/Types/GuestBookStatusType::LIST')),
                                         'selected': item.status
                                     }
                                 } %}
