--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -90,7 +90,7 @@
                                                 'type': 'select',
                                                 'name': 'status',
                                                 'args': {
-                                                    'option': _(reference('/App/Domain/Types/UserStatusType::LIST')),
+                                                    'option': _(constant('/App/Domain/Types/UserStatusType::LIST')),
                                                     'selected': item.status
                                                 }
                                             } %}
