--- a/src/Template/cup/user/newsletter/form.twig
+++ b/src/Template/cup/user/newsletter/form.twig
@@ -34,8 +34,8 @@
                                     'type': 'select',
                                     'name': 'type',
                                     'args': {
-                                        'option': _(reference('/App/Domain/References/User::NEWSLETTER_TYPE')),
-                                        'selected': reference('/App/Domain/References/User::NEWSLETTER_TYPE_ALL')
+                                        'option': _(constant('/App/Domain/References/User::NEWSLETTER_TYPE')),
+                                        'selected': constant('/App/Domain/References/User::NEWSLETTER_TYPE_ALL')
                                     }
                                 } %}
                             </div>
