--- a/src/Template/cup/catalog/attribute/form.twig
+++ b/src/Template/cup/catalog/attribute/form.twig
@@ -48,7 +48,7 @@
                                     'name': 'type',
                                     'message': '<b>Warning</b>: The Boolean type can only be added to a category.'|locale,
                                     'args': {
-                                        'option': _(reference('/App/Domain/Types/Catalog/AttributeTypeType::LIST')),
+                                        'option': _(constant('/App/Domain/Types/Catalog/AttributeTypeType::LIST')),
                                         'selected': attribute.type,
                                         'required': true
                                     }
