--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -102,7 +102,7 @@
                                             'name': 'type',
                                             'message': 'If there is no understanding of what this field affects, leave the default value.'|locale,
                                             'args': {
-                                                'option': _(reference('/App/Domain/Types/PageTypeType::LIST')),
+                                                'option': _(constant('/App/Domain/Types/PageTypeType::LIST')),
                                                 'selected': item.type
                                             }
                                         } %}
