--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -149,11 +149,11 @@
             <div class="collapse" id="nav-reference">
                 <ul class="nav nav-collapse">
                     <li class="submenu">
-                        <a data-toggle="collapse" href="#nav-catalog-other">
+                        <a data-toggle="collapse" href="#nav-reference-other">
                             <span class="sub-item">{{ 'Store'|locale }}</span>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="nav-catalog-other">
+                        <div class="collapse" id="nav-reference-other">
                             <ul class="nav nav-collapse subnav">
                                 <li>
                                     <a href="/cup/reference/store-locations">
@@ -214,13 +214,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/cup/reference/social-networks">
-                            <span class="sub-item">{{ 'Social Networks'|locale }}</span>
+                        <a href="/cup/reference/address-format">
+                            <span class="sub-item">{{ 'Address Format'|locale }}</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/cup/reference/address-format">
-                            <span class="sub-item">{{ 'Address Format'|locale }}</span>
+                        <a href="/cup/reference/social-networks">
+                            <span class="sub-item">{{ 'Social Networks'|locale }}</span>
                         </a>
                     </li>
                 </ul>
