--- a/src/Template/cup/reference/deliveries/index.twig
+++ b/src/Template/cup/reference/deliveries/index.twig
@@ -28,6 +28,7 @@
                         {% block thead %}
                             <div class="col col-sm-1 d-none d-sm-block">#</div>
                             <div class="col">{{ 'Title'|locale }}</div>
+                            <div class="col text-center">{{ 'Conditions'|locale }}</div>
                             <div class="col-4 col-sm-3 text-right"></div>
                         {% endblock %}
 
@@ -36,6 +37,7 @@
                                 <div class="row">
                                     <div class="col col-sm-1 d-none d-sm-block">{{ item.order }}</div>
                                     <div class="col">{{ item.title }}</div>
+                                    <div class="col text-center">{{ item.value|count() }}</div>
                                     <div class="col-4 col-sm-3 text-right">
                                         <form action="/cup/reference/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete this element?'|locale }}');">
                                             <div class="btn-group">
