--- a/src/Template/cup/reference/deliveries/form.twig
+++ b/src/Template/cup/reference/deliveries/form.twig
@@ -69,8 +69,9 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="d-flex align-items-center">
-                            <button type="button" data-btn-reference-deliveries-add class="btn btn-outline-secondary btn-icon ml-auto">
+                            <button type="button" data-btn-reference-deliveries-add class="btn btn-outline-secondary ml-auto">
                                 <i class="far fa-fw fa-plus"></i>
+                                {{ 'Add service'|locale }}
                             </button>
                         </div>
                     </div>
