--- a/src/Template/cup/reference/address-format/form.twig
+++ b/src/Template/cup/reference/address-format/form.twig
@@ -25,6 +25,7 @@
                                     'type': 'text',
                                     'name': 'title',
                                     'args': {
+                                        'required': true,
                                         'value': item.title,
                                     }
                                 } %}
@@ -37,6 +38,7 @@
                                     'type': 'textarea',
                                     'name': 'value[format]',
                                     'args': {
+                                        'required': true,
                                         'value': item.value.format,
                                     }
                                 } %}
