--- a/src/Template/cup/reference/deliveries/form.twig
+++ b/src/Template/cup/reference/deliveries/form.twig
@@ -25,6 +25,7 @@
                                     'type': 'text',
                                     'name': 'title',
                                     'args': {
+                                        'required': true,
                                         'value': item.title,
                                     }
                                 } %}
