--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -118,7 +118,9 @@
                                             <div class="btn-group">
                                                 <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info">
                                                     <i class="fas fa-file-invoice"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Invoice'|locale }}</span>
+                                                </a>
+                                                <a href="/cup/catalog/order/{{ item.uuid }}/shipping" class="btn btn-sm btn-outline-info">
+                                                    <i class="fas fa-dolly"></i>
                                                 </a>
                                                 <a href="/cup/catalog/order/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-edit"></i>
