--- a/src/Template/cup/system/index-step-3.twig
+++ b/src/Template/cup/system/index-step-3.twig
@@ -1,73 +1,81 @@
 <form action="/cup/system/3" method="post" onsubmit="return confirm('{{ 'Are you sure?'|locale }}');">
-    {% if user == null %}
-        <div class="card-body">
-            <h5 class="text-center">{{ 'Account'|locale }}</h5>
+    <div class="card-body">
+        <div class="row mb-3">
+            <div class="col-12">
+                <h4 class="text-center">{{ 'Administrator'|locale }}</h4>
 
-            <div class="row justify-content-center my-3">
-                <div class="col-12">
-                    <p class="text-center">
-                        {{ 'Setting up a new user'|locale }}<br>
-                        {{ 'with administrator rights'|locale }}
-                    </p>
-
-                    {% include 'cup/form.twig' with {
-                        'label': 'Login'|locale,
-                        'type': 'text',
-                        'name': 'user[username]',
-                        'args': {
-                            'required': true,
-                            'placeholder': 'administrator',
-                            'value': user.username ?? 'administrator'
-                        }
-                    } %}
-                    {% include 'cup/form.twig' with {
-                        'label': 'E-Mail',
-                        'type': 'email',
-                        'name': 'user[email]',
-                        'args': {
-                            'required': true,
-                            'placeholder': 'administrator@example.com',
-                            'value': user.email
-                        }
-                    } %}
-                    {% include 'cup/form.twig' with {
-                        'label': 'Password'|locale,
-                        'type': 'password',
-                        'name': 'user[password]',
-                        'args': {
-                            'required': true,
-                        }
-                    } %}
-                </div>
-
-                <div class="col-12">
-                    {% include 'cup/form.twig' with {
-                        'label': 'Filling the base'|locale,
-                        'type': 'select',
-                        'name': 'fill',
-                        'args': {
-                            'option': _(['no', 'system_default']),
-                            'selected': 'no'
-                        }
-                    } %}
-                </div>
+                <p class="text-center m-0">
+                    {{ 'Setting up user with administrator rights'|locale }}
+                </p>
+            </div>
+            <div class="col-6">
+                {% include 'cup/form.twig' with {
+                    'label': 'Login'|locale,
+                    'type': 'text',
+                    'name': 'user[username]',
+                    'args': {
+                        'required': true,
+                        'placeholder': 'administrator',
+                        'value': user.username ?? 'administrator'
+                    }
+                } %}
+            </div>
+            <div class="col-6">
+                {% include 'cup/form.twig' with {
+                    'label': 'E-Mail',
+                    'type': 'email',
+                    'name': 'user[email]',
+                    'args': {
+                        'required': true,
+                        'placeholder': 'administrator@example.com',
+                        'value': user.email
+                    }
+                } %}
+            </div>
+            <div class="col-6">
+                {% include 'cup/form.twig' with {
+                    'label': 'Password'|locale,
+                    'type': 'password',
+                    'name': 'user[password]',
+                    'args': {
+                        'required': true,
+                    }
+                } %}
             </div>
         </div>
-    {% endif %}
 
-    <div class="card-footer text-center">
-        <p>{{ 'Database Actions'|locale }}</p>
-
-        <div class="d-flex justify-content-center">
-            <button type="submit" name="database" value="create" class="btn {{ user == null ? 'btn-primary' : 'btn-secondary' }} mx-1">
-                {{ 'Create'|locale }}
-            </button>
-            <button type="submit" name="database" value="update" class="btn {{ user == null ? 'btn-secondary' : 'btn-primary' }} mx-1">
-                {{ 'Update'|locale }}
-            </button>
-            <button type="submit" name="database" value="delete" class="btn btn-danger mx-1">
-                {{ 'Delete'|locale }}
-            </button>
+        <div class="row">
+            <div class="col-12">
+                <h4 class="text-center">{{ 'Database'|locale }}</h4>
+            </div>
+            <div class="col-6">
+                {% include 'cup/form.twig' with {
+                    'label': 'Scheme'|locale,
+                    'type': 'select',
+                    'name': 'database[action]',
+                    'args': {
+                        'option': _({'': 'Do not change', 'create': 'Create', 'update': 'Update', 'delete': 'Delete'}),
+                        'selected': user == null ? 'create' : '',
+                    }
+                } %}
+            </div>
+            <div class="col-6">
+                {% include 'cup/form.twig' with {
+                    'label': 'Filling the base'|locale,
+                    'type': 'select',
+                    'name': 'database[fill]',
+                    'args': {
+                        'option': _({'no': 'no', 'default': 'Default'}),
+                        'selected': user == null ? 'default' : 'no'
+                    }
+                } %}
+            </div>
         </div>
+    </div>
+
+    <div class="card-footer">
+        <button type="submit" class="btn btn-primary mx-1">
+            {{ 'Apply'|locale }}
+        </button>
     </div>
 </form>
